--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Back end api for social networks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "seed": "node utils/seed.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
